[package]
name = "bgutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.28"
json = "0.12.4"
notify-rust = "4.9.0"
reqwest = "0.11.22"
statrs = "0.16.0"
time-macros = "0.2.15"
