[package]
name = "bum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
edit = "0.1.4"
hyper = "0.14.27"
json = "0.12.4"
notify-rust = "4.9.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
time-macros = "0.2.15"
tokio = "1.33.0"
tray-item = "0.9.0"

[build-dependencies]
embed-resource = "2.3"
